[package]
name = "dnac_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "cookies", "native-tls", "rustls-tls"] }
serde_json = "1.0"
argon2 = "0.5.3"
rand = { version = "0.8.5", features = ["std"] }
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.28.0", features = ["full"] }
rpassword = "7.0.0"
prettytable = "0.10.0"
chrono = "0.4.26"
anyhow = "1.0.93"
